# LAURA

./: .gitignore  .gitignore.swp  Dockerfile  Frame.cpp  Frame.h  Main.cpp  Makefile  README.md  build_with_Docker.sh  dataanalysis.cpp  dataanalysis.h  dinamica.cpp  dinamica.h  draw.cpp  draw.h  form.cpp  form.h  igraphutil.cpp  igraphutil.h  logdebug.cpp  logdebug.h  mact.cpp  networkop.cpp  networkop.h  randomgen.cpp  randomgen.h  run_with_Docker_on_Linux.sh  run_with_Docker_on_Mac.sh  runningmean.cpp  scripthisto.gn  sspop.cpp
